2007-03-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* Comparer.cs: Renamed IComparableOfTComparer<T> to GenericComparer<T>
	to fix binary serialization compatibility with MS.

2007-03-05  David Mitchell <dmitchell@logos.com>

	* Dictionary.cs: An instance of Dictionary<TKey,TValue> is
	supposed to throw a KeyNotFoundException when 
	the user attempts to retrieve the value associated with a key that
	is not in the dictionary.

	On the other hand, an instance of IDictionary is supposed to
	return null in similar circumstances.

2007-03-05  David Mitchell <dmitchell@logos.com>

	* List.cs: Fix InsertRange bug (80930).

2006-09-15  Gert Driesen  <drieseng@users.sourceforge.net>

	* List.cs: Fixed binary serialization compatibility with MS.NET.
	Increment version whenever _items is modified; this fixes version
	checks in Enumerator.

2006-09-06  Zoltan Varga  <vargaz@gmail.com>

	* Dictionary.cs: Speed up get_Item/set_Item/GetPrev () a bit. Increase capacity
	specified by the user so 'capacity' elements can really be added without resizing.

2006-07-12  Zoltan Varga  <vargaz@gmail.com>

	* Dictionary.cs: Swap order of parameters to cmp.Equals () to improve 
	compatibility with MS.NET and strange Equals () implementations.	

2006-05-17  Kazuki Oikawa  <kazuki@panicode.com>

	* List.cs : implemented Sort(Comparison <T>).

2006-05-08  Atsushi Enomoto  <atsushi@ximian.com>

	* List.cs : use proper comparer in Contains(), IndexOf() and
	  LastIndexOf(). Patch by Kazuki Oikawa. Fixed bug #77277.

2006-03-16  Ankit Jain  <jankit@novell.com>

	* List.cs (CheckIndex): Check for -ve indices and allow index == size.
	(Insert): Use CheckIndex.

2006-03-12  Zoltan Varga  <vargaz@gmail.com>

	* List.cs: Applied patch from <kazuki@panicode.com>. Fixes #77504.

2006-02-10  Martin Baulig  <martin@ximian.com>

	* Comparer.cs
	(IComparableOfTComparer): `T' must implement `IComparable<T>' and
	not `IComparable'.

Tue Jan 24 18:22:54 CET 2006 Paolo Molaro <lupus@ximian.com>
